# vargate

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/assets/: README.md
src/vargate/: __init__.py  cli.py  model.py  parsers.py  profile.py  report.py  scoring.py
src/vargate/profiles/: sv_somatic.yaml
src/vargate/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_model.py  test_parsers.py  test_profile.py  test_report.py  test_scoring.py
tests/fixtures/pair/: N1.alignment_summary_metrics.txt  N1.insert_size_metrics.txt  N1.markdup_metrics.txt  N1.wgs_metrics.txt  T1.alignment_summary_metrics.txt  T1.gc_bias_summary.txt  T1.insert_size_metrics.txt  T1.markdup_metrics.txt  T1.wgs_metrics.txt
